<resources>
    <string name="app_name">SecureWifi</string>
    <string name="get_wifi_scan_results">Сканировать точки доступа поблизости</string>
    <string name="connect_to_wifi">Подключиться к Wi-Fi</string>
    <string name="starting_scan">Начинаем сканирование…</string>
    <string name="attempting_to_connect">Подключение к %1$s (%2$d/%3$d) \nПароль: %4$s (%5$d/%6$d) \nСкорость подбора: %7$d/мин \n</string>
    <string name="password_hacking_results">Пароль был подобран!\nСеть: %1$s \nПароль: %2$s\nПароль угадан за следующее количество попыток: %3$d</string>
    <string name="couldnt_find_password">По результатам проверки уязвимостей в беспроводных точек доступа поблизости не обнаружено.</string>
    <string name="disconnect_from_wifi">Отключиться от Wi-fi</string>
    <string name="check_password_security">Проверка защищенности паролей точек Wi-Fi поблизости</string>
    <string name="list_of_wifi_nearby">Wi-Fi поблизости</string>
    <string name="check_of_passwords_safety">Проверка</string>
    <string name="security_check_results">Результаты</string>
    <string name="scan_failure">Произошла ошибка при сканировании. Подождите немного и попробуйте снова</string>
    <string name="connection_start_failure">Произошла ошибка при начале попыток подключения. Подождите немного и попробуйте снова</string>
    <string name="performing_connections">Производятся попытки подключения</string>
    <string name="connection_attempts_ended_success">Пароль был подобран!</string>
    <string name="connection_attempts_ended_nothing_found">Проверка завершена</string>
    <string name="attempting_to_connect_notification">Подключение к %1$s (%2$d/%3$d) \nПароль: %4$s (%5$d/%6$d)</string>
    <string name="password_hacking_results_notification">Сеть: %1$s \nПароль: %2$s</string>
    <string name="couldnt_find_password_notification">Уязвимостей в паролях точек Wi-Fi поблизости не обнаружено.</string>
    <string name="signal_level">%1$d/10</string>
    <string name="passwords_checked">Паролей проверено:</string>
    <string name="password_was_hacked">Пароль был подобран</string>
    <string name="password_was_not_hacked">Пароль не был подобран</string>
    <string name="signal">Уровень сигнала:</string>
    <string name="wifi_signal_level">Wifi signal level</string>
    <string name="new_password_hint">Добавить пароль</string>
    <string name="add_button">Add button</string>
    <string name="password_delete_imageview">Password delete imageview</string>
    <string name="attack_wifi">Атаковать точку</string>
    <string name="password_list">Список паролей:</string>
    <string name="tried_passwords">Список попробованных паролей:</string>
    <string name="custom_lists">Списки паролей</string>
    <string name="password_list_delete_imageview">Password list delete imageview\n</string>
    <string name="add_new_custom_password_list">Add new custom password list</string>
    <string name="edit_custom_list">Редактирование списка</string>
    <string name="adaptive">Адаптивный</string>
    <string name="most_popular">Самые популярные</string>
    <string name="list_name_hint">Название списка</string>
    <string name="save_list_name">Сохранить список</string>
    <string name="enter_list_name">Введите название списка</string>
    <string name="list_name_already_exist">Список с таким названием уже существует</string>
    <string name="plus_adaptive_passwords">+ Адаптивные пароли</string>
    <string name="wifi_attack_results">Результаты атаки на точку</string>
    <string name="correct_password_is">Пароль от точки: %1$s</string>
    <string name="menu_refresh">Сканировать Wi-Fi снова</string>
    <string name="select_all">Выбрать все</string>
    <string name="deselect_all">Снять выделение</string>
    <string name="closebutton" translatable="false">CloseButton</string>
    <string name="save">Сохранить</string>
    <string name="wifi_icon" translatable="false">Wifi Icon</string>
    <string name="dropdown_arrow_icon" translatable="false">Dropdown arrow icon</string>
    <string name="password_icon" translatable="false">Password Icon</string>
    <string name="no_results_yet">Результатов еще нет</string>
    <string name="no_password_lists_selected">-Списки паролей не выбраны-</string>
    <string name="something_and_n_others">%1$s и %2$d др.</string>
    <string name="no_wifies_selected">-Точки для проверки не выбраны-</string>
    <string name="passwords_amt">Паролей: %d</string>
    <string name="total_passwords_amt">Паролей: %d</string>
    <string name="wifi_info">Информация о Wi-Fi</string>
    <string name="wpa_short_explanation">Поддержка стандарта WPA (Wi-Fi Protected Access)</string>
    <string name="wpa2_short_explanation">Поддержка стандарта WPA2 (Wi-Fi Protected Access II)</string>
    <string name="wep_short_explanation">Поддержка протокола WEP (Wired Equivalent Privacy)</string>
    <string name="ess_short_explanation">Режим ESS (Extended Service Set)</string>
    <string name="ibss_short_explanation">Режим Ad-Hoc (или Independent Basic Service Set (IBSS))</string>
    <string name="wps_short_explanation">Поддержка технологии WPS (Wi-Fi Protected Setup)</string>
    <string name="rsn_short_explanation">Сеть с повышенной безопасностью (Robust Security Network (RSN))</string>
    <string name="psk_short_explanation">Использование Pre-Shared Key (PSK) для аутентификации</string>
    <string name="eap_short_explanation">Использование Расширяемого Протокола Аутентификации (Extensible Authentication Protocol (EAP))</string>
    <string name="tkip_short_explanation">Использование метода шифрования TKIP (Temporal Key Integrity Protocol)</string>
    <string name="ccmp_short_explanation">Использование протокола шифрования CCMP (Counter Mode with Cipher Block Chaining Message Authentication Code Protocol encryption, или AES-CCMP)</string>
    <string name="open_short_explanation">Сеть является открытой и не требует аутентификации или шифрования</string>
    <string name="ieee8021x_short_explanation">Использование стандарта IEEE 802.1X для аутентификации</string>
    <string name="passpoint_short_explanation">Использование стандарт Passpoint для аутентификации</string>
    <string name="wpa_explanation">Wi-Fi Protected Access (WPA) — программа сертификации безопасности, которая стала доступна в 2003 году. Wi-Fi Alliance задумал ее как промежуточную меру в ожидании доступности более безопасного и сложного WPA2. Протокол WPA реализует протокол целостности временного ключа (TKIP). WPA также включает проверку целостности сообщения. С тех пор исследователи обнаружили уязвимость в WPA, которая основывалась на старых уязвимостях WEP и ограничениях хэш-функции кода целостности сообщений (уязвимость назвали "Michael"), которая позволяла извлекать поток ключей из коротких пакетов и использовать их для повторного внедрения и подмены.</string>
    <string name="wpa2_explanation">WPA2, ратифицированная в 2004 году, заменила WPA. WPA2, требующий тестирования и сертификации Wi-Fi Alliance, реализует обязательные элементы IEEE 802.11i. В частности, он включает поддержку CCMP, режима шифрования на основе AES. В частности, он включает поддержку CCMP, режима шифрования на основе AES. Сертификация началась в сентябре 2004 г. С 13 марта 2006 г. по 30 июня 2020 г. сертификация WPA2 была обязательной для всех новых устройств, имеющих торговую марку Wi-Fi. В сетях WLAN, защищенных WPA2, безопасная связь устанавливается посредством многоэтапного процесса. Первоначально устройства связываются с точкой доступа (AP) посредством запроса на ассоциацию. За этим следует четырехстороннее рукопожатие — важный шаг, гарантирующий, что и клиент, и точка доступа имеют правильный предварительный общий ключ (PSK) без фактической его передачи. Во время этого рукопожатия генерируется парный переходный ключ (PTK) для безопасного обмена данными.</string>
    <string name="wep_explanation">WEP шифрует трафик с использованием 64- или 128-битного шестнадцатеричного ключа. Это статический ключ, что означает, что весь трафик, независимо от устройства, шифруется с использованием одного ключа. Ключ WEP позволяет компьютерам в сети обмениваться закодированными сообщениями, скрывая при этом содержимое сообщений от злоумышленников. Этот ключ используется для подключения к сети с поддержкой беспроводной безопасности. Одной из главных целей WEP было предотвращение атак «Человек посередине», что она и делала какое-то время. Однако, несмотря на изменения в протоколе и увеличение размера ключа, со временем в стандарте WEP были обнаружены различные недостатки безопасности. По мере увеличения вычислительной мощности преступникам стало легче использовать эти недостатки. Из-за его уязвимостей Wi-Fi Alliance официально прекратил поддержку WEP в 2004 году.</string>
    <string name="ess_explanation">Расширенная зона обслуживания (ESS) — это беспроводная сеть, созданная несколькими точками доступа, которая представляется пользователям как единая бесшовная сеть, например сеть, охватывающая дом или офис, которая слишком велика для надежного покрытия одной точкой доступа. Это набор из одного или нескольких основных зон обслуживания (BSS, или Basic Service Sets) в общем логическом сегменте сети (т. е. в той же IP-подсети и VLAN). Расширенные наборы служб делают возможными такие службы распространения, как централизованная аутентификация.</string>
    <string name="ibss_explanation">Эпизодическая сеть (Ad-Hoc или IBSS – Independent Basic Service Set) представляет собой простейшую структуру локальной сети, которая позволяет беспроводным устройствам или станциям взаимодействовать друг с другом без какого-либо среднего или центрального устройства. Он не содержит и не включает в себя какую-либо точку доступа (AP). Вот почему он также известен как одноранговый режим или одноранговая сеть. Одноранговая сеть означает просто два или более устройств, станций или компьютеров, подключенных друг к другу напрямую и совместно использующих ресурсы без какого-либо отдельного серверного компьютера. IBSS — это набор услуг, который используется редко. Это требуется только в том случае, если два или более устройств, таких как мобильные телефоны, ноутбуки, планшеты и т. д., хотят обмениваться файлами или передавать их без подключения к какой-либо беспроводной сети, предоставляемой точкой доступа.</string>
    <string name="generated_passwords">Генерируемые пароли</string>
    <string name="fixed_passwords">Фиксированный список</string>
    <string name="new_name_hint">Имя</string>
    <string name="new_second_name_hint">Фамилия</string>
    <string name="new_father_or_middle_name_hint">Отчество</string>
    <string name="new_day_hint">День</string>
    <string name="new_month_hint">Месяц</string>
    <string name="new_year_hint">Год</string>
    <string name="key_word">Ключевое слово</string>
    <string name="person_info_title">Информация о людях, связанных с точкой доступа и любые даты (например, дата рождения). Можно заполнить 1 и больше полей.</string>
    <string name="place_name_title">Названия мест, фирм, учреждений и другие ключевые слова.</string>
    <string name="fill_at_least_one_field">Заполните одно из полей.</string>
    <string name="amount_of_generated_passwords">Количество генерируемых паролей.</string>
</resources>