<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/connectFragment"
    android:id="@+id/nav_graph">

    <fragment
        android:id="@+id/connectFragment"
        android:name="com.practice.securewifi.ConnectFragment"
        android:label="@string/check_of_passwords_safety"
        tools:layout="@layout/fragment_connect"/>

    <fragment
        android:id="@+id/scanFragment"
        android:name="com.practice.securewifi.ScanFragment"
        android:label="@string/list_of_wifi_nearby"
        tools:layout="@layout/fragment_scan"/>

    <fragment
        android:id="@+id/resultsFragment"
        android:name="com.practice.securewifi.ResultsFragment"
        android:label="@string/security_check_results"
        tools:layout="@layout/fragment_results"/>

</navigation>