<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/listNameContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/list_name_hint"
                app:boxBackgroundColor="?attr/backgroundColor">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/listNameEditText"
                    android:textSize="16sp"
                    android:maxLines="1"
                    android:paddingHorizontal="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tab_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="6dp"
                android:minHeight="40dp"
                app:tabTextColor="?attr/textColorMain"
                app:tabBackground="?attr/backgroundColorSmooth">
                <com.google.android.material.tabs.TabItem
                    android:text="@string/fixed_passwords"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <com.google.android.material.tabs.TabItem
                    android:text="@string/generated_passwords"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.tabs.TabLayout>

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/view_pager"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />
        </LinearLayout>
    </ScrollView>
    <Button
        android:id="@+id/save_list_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="2dp"
        android:layout_marginHorizontal="20dp"
        android:padding="16dp"
        android:text="@string/save_list_name" />
</LinearLayout>