<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/backgroundColorSharp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/amount_of_generated_passwords"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:paddingVertical="4dp"
            android:text="@string/amount_of_generated_passwords"
            android:textColor="?attr/textColorMain"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <SeekBar
                android:id="@+id/seekBarPasswordsAmt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                android:max="1000"
                android:maxHeight="10dp"
                android:padding="16dp"
                android:progress="100"
                android:progressDrawable="@drawable/seekbar_drawable"
                android:splitTrack="false"
                android:thumb="@drawable/seekbar_thumb" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/dynamicPasswordsAmtContainer"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minEms="3"
                android:maxEms="4"
                android:layout_marginEnd="10dp"
                app:boxBackgroundColor="?attr/backgroundColor">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/dynamicPasswordsAmtEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLines="1"
                    android:textSize="14sp"
                    tools:text="100" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <!-- This layout is needed to set click listener on it to hide soft keyboard
         it couldn't be the root layout because setting click listener on it made seekbar gain focus-->
        <TextView
            android:id="@+id/textview_add_person_info_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:paddingVertical="4dp"
            android:text="@string/person_info_title"
            android:textColor="?attr/textColorMain"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textview_ask_for_fill_on_of_fields"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:paddingVertical="4dp"
            android:text="@string/fill_at_least_one_field"
            android:textColor="?attr/textColorError"
            android:textSize="16sp"
            android:visibility="gone" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/add_person_info_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/newNameContainer"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:hint="@string/new_name_hint"
                app:boxBackgroundColor="?attr/backgroundColor"
                app:layout_constraintEnd_toStartOf="@+id/button_add_person_info"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/newNameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/newFatherOrMiddleNameContainer"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:hint="@string/new_father_or_middle_name_hint"
                app:boxBackgroundColor="?attr/backgroundColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/newNameContainer">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/newFatherOrMiddleNameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/newSecondNameContainer"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:hint="@string/new_second_name_hint"
                app:boxBackgroundColor="?attr/backgroundColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/newFatherOrMiddleNameContainer">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/newSecondNameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <ImageButton
                android:id="@+id/button_add_person_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="6dp"
                android:background="@drawable/round_button"
                android:contentDescription="@string/add_button"
                android:padding="6dp"
                android:src="@drawable/add_plus"
                app:layout_constraintBottom_toBottomOf="@id/newNameContainer"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/newNameContainer"
                app:layout_constraintVertical_bias="0.6" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/newDayContainer"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="5dp"
                android:hint="@string/new_day_hint"
                app:boxBackgroundColor="?attr/backgroundColor"
                app:layout_constraintEnd_toEndOf="@id/guideline_day_input_end"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/newSecondNameContainer">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/newDayEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLines="1"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/newMonthContainer"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:hint="@string/new_month_hint"
                app:boxBackgroundColor="?attr/backgroundColor"
                app:layout_constraintEnd_toEndOf="@id/guideline_month_input_end"
                app:layout_constraintStart_toStartOf="@id/guideline_day_input_end"
                app:layout_constraintTop_toBottomOf="@+id/newSecondNameContainer">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/newMonthEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLines="1"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/newYearContainer"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:hint="@string/new_year_hint"
                app:boxBackgroundColor="?attr/backgroundColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/guideline_month_input_end"
                app:layout_constraintTop_toBottomOf="@+id/newSecondNameContainer">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/newYearEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLines="1"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_day_input_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.275" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_month_input_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.55" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/person_info_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"
                android:padding="10dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/person_info_item" />
        </RelativeLayout>

        <View
            android:id="@+id/separator"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?attr/controlColor" />

        <TextView
            android:id="@+id/textview_add_place_name_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:paddingVertical="4dp"
            android:text="@string/place_name_title"
            android:textColor="?attr/textColorMain"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/add_place_name_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/newPlaceNameContainer"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_weight="1"
                android:hint="@string/key_word"
                app:boxBackgroundColor="?attr/backgroundColor">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/newPlaceNameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <ImageButton
                android:id="@+id/button_add_place_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="6dp"
                android:background="@drawable/round_button"
                android:contentDescription="@string/add_button"
                android:padding="6dp"
                android:src="@drawable/add_plus" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/places_names_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"
                android:padding="10dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/place_name_item" />
        </RelativeLayout>
    </LinearLayout>

    <View
        android:id="@+id/cover"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/backgroundColorSharp"
        android:elevation="10dp"
        tools:visibility="gone" />
</FrameLayout>
